--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +20,84 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Jobs</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if   app.user  %}
+                        {% if   app.user.roles[0] == 'ROLE_DEMANDEUREMPLOI'  %}
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="{{path('c_v_show')}}">Mon CV</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="{{path('all_emplois')}}">Offres d'emploi</a>
+                            </li>
+                        {% endif %}
+                        {% if   app.user.roles[0] == 'ROLE_ENTREPRISE'  %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Mes offres d'emploi
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{{path('my_emplois_entreprise')}}" >Liste</a></li>
+                                    <li><a class="dropdown-item" href="{{path('create_emploi')}}">Creer</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="{{path('all_emplois')}}">Offres d'emploi</a>
+                            </li>
+                        {% endif %}
+                    {% endif %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
+                    {% if   app.user == null %}
+                    <a class="btn btn-outline-success me-2" href="{{path('app_login')}}"  type="submit">Connexion</a>
+                    <a class="btn btn-success ml-1" href="{{path('register')}}"  >Inscription</a>
+                    {% endif %}
+                    {% if   app.user  %}
+                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{ app.user.nomComplet }}</a>
+                    {% if   app.user.avatar  %}
+                        <img style="height: 35px" src="{{ asset('asset/uploads/') }}{{ app.user.avatar   }}">
+                    {% else %}
+                        <img style="height: 35px;border-radius: 50%;margin-right: 20px"src="{{ asset('asset/img/avatar.png') }}">
+                    {% endif %}
+                        <a class="btn btn-outline-success me-2" href="{{path('app_logout')}}" >Deconnexion</a>
+                     {% endif %}
+                </form>
+            </div>
+        </div>
+    </nav>
+        {% block body %}
+
+        {% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
     </body>
 </html>
