--- a/templates/emploi/details_emploi.html.twig
+++ b/templates/emploi/details_emploi.html.twig
@@ -10,11 +10,15 @@
     <div class="row">
         <div class="col-sm-8 mb-4">
             <div class="card">
-                <img
-                        class="card-img-top"
-                        src="https://source.unsplash.com/1080x720/?product"
-                        alt="Annonce 1"
-                />
+
+                {% if  emploi.avatar %}
+                    <img class="card-img-top"  src="{{asset('/asset/uploads/')}}{{ emploi.avatar }}" alt="Card image cap">
+
+                {% else %}
+                    <img class="card-img-top" src="{{asset('/asset/img/placeholder.png')}}" alt="Card image cap">
+
+                {% endif   %}
+
                 <div class="card-body">
                     <h5 class="card-title">{{ emploi.libelle }}</h5>
                     <p class="card-text">
