--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,26 +52,22 @@
                             <li class="nav-item">
                                 <a class="nav-link active"  aria-current="page" href="{{path('all_emplois')}}">Offres d'emploi</a>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Categories
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{{path('categorie_index')}}">Liste</a></li>
+                                    <li><a class="dropdown-item" href="{{path('categorie_new')}}">Ajouter</a></li>
+
+                                </ul>
+                            </li>
                         {% endif %}
                     {% endif %}
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
+
+
+
                 </ul>
                 <form class="d-flex">
                     <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
