--- a/templates/categorie/_delete_form.html.twig
+++ b/templates/categorie/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('categorie_delete', {'id': categorie.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('categorie_delete', {'id': categorie.id}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette categorie');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ categorie.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
