--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Categorie</h1>
 
-    {{ include('categorie/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('categorie/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('categorie_index') }}">back to list</a>
+    <a href="{{ path('categorie_index') }}">Liste des categories</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
