--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Categorie{% endblock %}
 
 {% block body %}
-    <h1>Categorie</h1>
+    <h3 class="text-center">Categorie</h3>
 
     <table class="table">
         <tbody>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('categorie_index') }}">back to list</a>
+    <a href="{{ path('categorie_index') }}">Liste categorie</a>
 
-    <a href="{{ path('categorie_edit', {'id': categorie.id}) }}">edit</a>
+    <a href="{{ path('categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
