--- a/templates/emploi/my_emplois_entreprise.html.twig
+++ b/templates/emploi/my_emplois_entreprise.html.twig
@@ -8,13 +8,13 @@
     {% if emplois %}
 <div class="row mx-auto col-md-10 ">
     {% for emploi in emplois %}
-<div class="col-3" id="emploi{{ emploi.id }}">
-    <div   class="card" style="width: 18rem;">
+<div class="col-sm-4 col-md-4 col-xs-6 col-lg-3  "  id="emploi{{ emploi.id }}">
+    <div   class="card" style="width: 100%;">
         {% if  emploi.avatar %}
             <img class="card-img-top" style="height: 150px" src="{{asset('/asset/uploads/')}}{{ emploi.avatar }}" alt="Card image cap">
 
         {% else %}
-            <img class="card-img-top" style="height: 150px" src="{{asset('/asset/img/avatar.png')}}" alt="Card image cap">
+            <img class="card-img-top" style="height: 150px" src="{{asset('/asset/img/placeholder.png')}}" alt="Card image cap">
 
         {% endif   %}
 
