--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,7 +3,18 @@
 {% block title %}Creation de compte{% endblock %}
 
 {% block body %}
-    <div class="col-md-6 mx-auto"style="margin-top: 150px">
+
+{% if errors %}
+<div class="alert alert-danger col-8 mx-auto">
+<h3>Erreurs</h3>
+<ul>
+    {% for error in errors %}
+        <li>{{ error.message }}</li>
+    {% endfor %}
+</ul>
+</div>
+{% endif %}
+    <div class="col-md-6 mx-auto"style="margin-top: 20px">
         <h1 class="text-center">Bienvenue</h1>
         <h3 class="text-center mt-3 mb-3">Inscription</h3>
         <div class="col-md-4 col-sm-4 col-4 mx-auto">
